--- a/401-hw1.Rmd
+++ b/401-hw1.Rmd
@@ -13,70 +13,6 @@ auto$origin <- as.factor(auto$origin)
 str(auto)
 ```
 
-```{r problem_1}
-model <- lm(mpg ~ horsepower + as.factor(origin), data = auto)
-model_summary <- summary(model)
-model_summary
-```
-
-
-```{r problem_1.h}
-# New data for prediction
-new_data_1 <- data.frame(horsepower = 98, origin = factor(1, levels = c(1, 2, 3)))
-new_data_2 <- data.frame(horsepower = 98, origin = factor(2, levels = c(1, 2, 3)))
-new_data_3 <- data.frame(horsepower = 98, origin = factor(3, levels = c(1, 2, 3)))
-
-# Calculate the 95% prediction interval
-predicted_interval1 <- predict(model, new_data_1, interval = "prediction", level = 0.95)
-predicted_interval2 <- predict(model, new_data_2, interval = "prediction", level = 0.95)
-predicted_interval3 <- predict(model, new_data_3, interval = "prediction", level = 0.95)
-
-# Print the prediction interval
-print(predicted_interval1)
-print(predicted_interval2)
-print(predicted_interval3)
-```
-```{r problem_1.i}
-# Calculate the 95% prediction interval
-confidence_interval1 <- predict(model, new_data_1, interval = "confidence", level = 0.99)
-confidence_interval2 <- predict(model, new_data_2, interval = "confidence", level = 0.99)
-confidence_interval3 <- predict(model, new_data_3, interval = "confidence", level = 0.99)
-
-# Print the prediction interval
-print(confidence_interval1)
-print(confidence_interval2)
-print(confidence_interval3)
-```
-
-
-```{r problem_2.j}
-
-# Extract coefficients and standard errors
-coefficients <- summary(model)$coefficients
-slope <- coefficients["horsepower", "Estimate"]
-se_slope <- coefficients["horsepower", "Std. Error"]
-
-# Calculate the 90% confidence interval
-t_value <- qt(0.95, df = model$df.residual) # 0.95 for two-tailed 90% confidence interval
-lower_bound <- slope - t_value * se_slope
-upper_bound <- slope + t_value * se_slope
-
-c(lower_bound, upper_bound)
-
-```
-
-```{r problem_2.k}
-auto$horsepower[is.na(auto$horsepower)] <- mean(auto$horsepower, na.rm = TRUE)
-auto$mpg[is.na(auto$mpg)] <- mean(auto$mpg, na.rm = TRUE)
-
-library(ggplot2)
-ggplot(auto, aes(x = horsepower, y = mpg, color = as.factor(origin))) + 
-  geom_point(size = 2, alpha = 0.6) + 
-  geom_smooth(method = "lm", se = TRUE, color = "red") + 
-  labs(title = "MPG vs Horsepower by Origin", x = "Horsepower", y = "MPG", color = "Origin") + 
-  theme_minimal()
-```
-
 ### problem 3
 
 ```{r problem_3_setup}
@@ -91,6 +27,8 @@ summary(fit)
 ```{r problem_3_cdef}
 # Assuming 'auto' is your dataset
 library(psych)
+
+auto$origin <-  factor((auto$origin), labels = c("US", "Europe", "Japan"))
 
 # Fit the multiple linear regression model
 fit = lm(mpg ~ cylinders + displacement + horsepower + weight + acceleration + year + origin, data = auto)
@@ -127,14 +65,12 @@ a) Among all predictors, Cylinders, displacement, horsepower, and weight show re
 
 b) The correlation between mpg and displacement is -0.80. This strong negative correlation indicates that as displacement increases, mpg tends to decrease significantly. Since all of the correlation coefficients are marked with three asterisks (***) between predictors and mpg, it indicates all variables have significant relationships with mpg.
 
-c) Since the F-test is 228.7896, which is highly significant, it suggests that there is a statistically significant relationship between the set of predictors and the mpg response variable.
+c) Since the F-test is 224.4507, which is highly significant, it suggests that there is a statistically significant relationship between the set of predictors and the mpg response variable.
 
 d) All predictors have p-values less than the significance level of 0.05, indicating that they all have a statistically significant relationship with the response variable mpg. Among these predictors, year has the most significant relationship since it has the lowest p-value and highest t-value.
 
-e) The positive slope of 0.7891 suggests that for each additional year (as cars get newer), the mpg increases by approximately 0.7891 units, holding all other variables constant. This indicates that newer cars tend to be more fuel-efficient.
+e) The positive slope of 0.7770269 suggests that for each additional year (as cars get newer), the mpg increases by approximately 0.7770269 units, holding all other variables constant.
 
-f) The positive slope of 0.0236 suggests that for each unit increase in displacement, the mpg slightly increases by approximately 0.0236 units, holding all other variables constant.
-
-
+f) The positive slope of 0.02397864 suggests that for each unit increase in displacement, the mpg slightly increases by approximately 0.02397864 units, holding all other variables constant.
 
 
