--- a/hw4/Q4.ipynb
+++ b/hw4/Q4.ipynb
@@ -404,10 +404,6 @@
     }
    ],
    "source": [
-    "# excluding the target variable \n",
-    "#X = bike_data.drop(columns=['trips', 'ID'])\n",
-    "#Drop the high VIF variables\n",
-    "# X_reduced = X.drop(columns=['DECEPTIVE_PRACTICE', 'OTHER_OFFENSE'])\n",
     "\n",
     "corr_with_trips = corr_matrix['trips'].abs().sort_values(ascending=False)\n",
     "columns_to_drop = corr_with_trips[corr_with_trips < 0.0505].index.tolist()\n",
@@ -415,9 +411,7 @@
     "X_reduced = bike_data.drop(columns=columns_to_drop)\n",
     "\n",
     "\n",
-    "# Update composite variables based on the columns that are still available\n",
-    "\n",
-    "# Violent Crimes composite variable (excluding columns that were dropped)\n",
+    "# composite variables based on the columns that are still available and relevant\n",
     "X_reduced['Violent_Crimes'] = X_reduced[['BATTERY', 'WEAPONS_VIOLATION', 'HOMICIDE']].mean(axis=1)\n",
     "X_reduced['Stealing_Related_Crimes'] = X_reduced[['DECEPTIVE_PRACTICE', 'THEFT', 'ROBBERY', 'GAMBLING', 'KIDNAPPING']].mean(axis=1)\n",
     "X_reduced['Property_Crimes'] = X_reduced[['CRIMINAL_DAMAGE', 'MOTOR_VEHICLE_THEFT', 'ARSON']].mean(axis=1)\n",
